--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "^16.7.4",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/react-notifications-component": "^3.1.1",
     "@types/react-router-dom": "^5.1.8",
+    "animate.css-react": "^1.1.0",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-notification-alert": "^0.0.13",
+    "react-notifications-component": "^3.1.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.5",
